@@ -1,3 +1,7 @@
+2000-08-16  Mark Kettenis  <kettenis@gnu.org>
+
+	* sysdeps/mach/hurd/lseek64.c: New file.
+
 2000-08-15  Mark Kettenis  <kettenis@gnu.org>
 
 	* sysdeps/mach/hurd/i386/bits/time.h (__clockid_t, __timer_t):
